--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -28,7 +28,7 @@
             {% endfor %}
             <button type="submit" class="login-btn">Entrar</button>
         </form>
-        <a href="{% url 'registro' %}" class="login-link">¿No tienes cuenta? Regístrate</a>
+        <a href="{% url 'users:registro' %}" class="login-link">¿No tienes cuenta? Regístrate</a>
         <a href="/" class="login-link">Volver al inicio</a>
     </div>
 </body>
